# clipper

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  commands.rs  database.rs  hotkey.rs  lib.rs  models.rs  tray.rs
src-tauri/src/clipboard/: clipboard.rs
src-tauri/src/db/: io.rs  queries.rs
src-tauri/src/keyboard/: keyboard.rs
src-tauri/src/ui/: dialog.rs  tray.rs
src/lib/components/: ClipboardItem.svelte
src/routes/: +page.svelte
