[package]
name = "SnapPaste"
version = "1.5.1"
description = "Easy Clipboard"
authors = ["21b"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snappaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.4"
enigo = "0.6.1"
image = { version = "0.25", default-features = false, features = ["png"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_UI_Accessibility",
] }
clipboard-master = "4"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
panic = "abort"
